Fixed zoom. Will not overflow correctly if zoomed out when chart overflows

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,7 @@ abbr, acronym {
     margin: 5px;
     width: auto;
     transform-origin: left top;
+    overflow: visible;
 }
 
 #chart {
